# zkns

./: .env  .gitignore  Anchor.toml  package.json
programs/zkns/: Cargo.toml
programs/zkns/src/: lib.rs
programs/zkns/tests/: integration.rs
tests/: zkns.ts
