[package]
name = "zkns"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "zkns"

[features]
default = ["custom-heap"]
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
custom-heap = ["light-heap"]

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = "0.29.0"
solana-program = "=1.18.22"
account-compression = { git = "https://github.com/mjkid221/light-protocol", branch = "main", version = "0.7.0", features = [
  "cpi",
] }
light-heap = { git = "https://github.com/mjkid221/light-protocol", branch = "main", version = "0.5.0", optional = true }
light-system-program = { git = "https://github.com/mjkid221/light-protocol", branch = "main", version = "0.7.0", features = [
  "cpi",
] }
light-utils = { git = "https://github.com/mjkid221/light-protocol", branch = "main", version = "0.5.0" }
light-sdk = { git = "https://github.com/mjkid221/light-protocol", branch = "main", version = "0.5.0" }
light-hasher = { git = "https://github.com/mjkid221/light-protocol", branch = "main", version = "0.5.0" }
