[package]
name = "zkns"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "zkns"

[features]
default = ["idl-build"]
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = [
  "anchor-lang/idl-build",
  "anchor-spl/idl-build",
  "light-sdk/idl-build",
]
test-sbf = []
bench-sbf = []
custom-heap = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = "0.29.0"
solana-program = "=1.18.22"
light-utils = { git = "https://github.com/mjkid221/light-protocol", branch = "snapshot-23-09-2024", version = "1.0.0" }
light-sdk = { git = "https://github.com/mjkid221/light-protocol", branch = "snapshot-23-09-2024", version = "0.10.0", features = [
  "idl-build",
] }
light-hasher = { git = "https://github.com/mjkid221/light-protocol", branch = "snapshot-23-09-2024", version = "1.0.0", features = [
  "solana",
] }
light-macros = { git = "https://github.com/mjkid221/light-protocol", branch = "snapshot-23-09-2024", version = "1.0.0" }
light-sdk-macros = { git = "https://github.com/mjkid221/light-protocol", branch = "snapshot-23-09-2024", version = "0.3.0" }
light-verifier = { git = "https://github.com/mjkid221/light-protocol", branch = "snapshot-23-09-2024", version = "1.0.0" }
borsh = "0.10.0"
light-heap = { git = "https://github.com/mjkid221/light-protocol", branch = "snapshot-23-09-2024", version = "1.0.0", optional = true }

[target.'cfg(not(target_os = "solana"))'.dependencies]
solana-sdk = "1.18.22"

[dev-dependencies]
solana-program-test = "1.18.22"
anyhow = "1.0.44"
light-client = { git = "https://github.com/mjkid221/light-protocol", branch = "snapshot-23-09-2024" }
light-test-utils = { git = "https://github.com/mjkid221/light-protocol", branch = "snapshot-23-09-2024", version = "1.0.0" }
